server/.happypack/s-1847381910
SyntaxError: C:/Users/Dmitriy/WebstormProjects/FirstProject/client/containers/Map/parts/Cell.js: Unexpected token, expected ; (17:28)

[0m [90m 15 | [39m        let newArray [33m=[39m [][33m;[39m
 [90m 16 | [39m
[31m[1m>[22m[39m[90m 17 | [39m        [36mfor[39m(let i [33m=[39m [35m0[39m[33m;[39mi [33m<[39m [35m32[39m)
 [90m    | [39m                            [31m[1m^[22m[39m
 [90m 18 | [39m
 [90m 19 | [39m        [36mthis[39m[33m.[39mprops[33m.[39mmapActions[33m.[39minitMap(newArray)[33m;[39m
 [90m 20 | [39m    }[0m

BabelLoaderError: SyntaxError: C:/Users/Dmitriy/WebstormProjects/FirstProject/client/containers/Map/parts/Cell.js: Unexpected token, expected ; (17:28)

[0m [90m 15 | [39m        let newArray [33m=[39m [][33m;[39m
 [90m 16 | [39m
[31m[1m>[22m[39m[90m 17 | [39m        [36mfor[39m(let i [33m=[39m [35m0[39m[33m;[39mi [33m<[39m [35m32[39m)
 [90m    | [39m                            [31m[1m^[22m[39m
 [90m 18 | [39m
 [90m 19 | [39m        [36mthis[39m[33m.[39mprops[33m.[39mmapActions[33m.[39minitMap(newArray)[33m;[39m
 [90m 20 | [39m    }[0m

    at transpile (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\babel-loader\lib\index.js:63:13)
    at Object.module.exports (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\babel-loader\lib\index.js:163:20)
    at applySyncOrAsync (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:341:21)
    at apply (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:268:5)
    at C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:131:7
    at applyPitchLoader (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:184:14)
    at applyPitchLoader (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:192:14)
    at applyPitchLoader (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:192:14)
    at applyPitchLoaders (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:222:4)
    at applyLoaders (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:116:3)